--- a/AdSync/App.config
+++ b/AdSync/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="AdSync.Properties.Settings.Db" connectionString="Data Source=c-goa-sql-10044\sql2019rc1;Initial Catalog=erp;Integrated Security=True"
+        <add name="AdSync.Properties.Settings.Db" connectionString="Data Source=c-goa-sql-10044\sql2019rc1;Initial Catalog=utility;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
