--- a/AdSync/Properties/Settings.settings
+++ b/AdSync/Properties/Settings.settings
@@ -4,11 +4,11 @@
   <Settings>
     <Setting Name="Db" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=c-goa-sql-10044\sql2019rc1;Initial Catalog=erp;Integrated Security=True&lt;/ConnectionString&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=c-goa-sql-10044\sql2019rc1;Initial Catalog=utility;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=c-goa-sql-10044\sql2019rc1;Initial Catalog=erp;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=c-goa-sql-10044\sql2019rc1;Initial Catalog=utility;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
