--- a/AdSyncTest/App.config
+++ b/AdSyncTest/App.config
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AdSyncTest.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+    <applicationSettings>
+        <AdSyncTest.Properties.Settings>
+            <setting name="UpdateFileIntervalMinutes" serializeAs="String">
+                <value>5</value>
+            </setting>
+        </AdSyncTest.Properties.Settings>
+    </applicationSettings>
 </configuration>
