--- a/fpe/FPE.Net-master/FPE.Demo/FPE.Demo.csproj
+++ b/fpe/FPE.Net-master/FPE.Demo/FPE.Demo.csproj
@@ -4,18 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EAA9A5CD-B5E7-427F-9EC1-C3EE8F6D078C}</ProjectGuid>
+    <ProjectGuid>{BD49066A-79D5-4CCC-8BEB-45D4B5D4D84B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AdSyncTest</RootNamespace>
-    <AssemblyName>AdSyncTest</AssemblyName>
+    <RootNamespace>FPE.Demo</RootNamespace>
+    <AssemblyName>FPE.Demo</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -36,8 +35,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.DirectoryServices" />
-    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,27 +45,14 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AdSync\AdSync.csproj">
-      <Project>{a047db82-8373-4318-bf65-202b05ec5879}</Project>
-      <Name>AdSync</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Health.Abstractions\Health.Abstractions.csproj">
-      <Project>{ac223035-c97d-4045-ac2c-3050c50b658b}</Project>
-      <Name>Health.Abstractions</Name>
+    <ProjectReference Include="..\FPE.Net\FPE.Net.csproj">
+      <Project>{0d9ec2ef-981e-428b-8b4c-e91ab99bc2cc}</Project>
+      <Name>FPE.Net</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
