--- a/AdSync/App.config
+++ b/AdSync/App.config
@@ -3,8 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="AdSync.Properties.Settings.Db" connectionString="Data Source=##sqlServer##;Initial Catalog=utility;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="AdSync.Properties.Settings.Db" connectionString="Data Source=##sqlServer##;Initial Catalog=utility;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
