--- a/Health/Health/Health.csproj
+++ b/Health/Health/Health.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="C5, Version=2.5.0.0, Culture=neutral, PublicKeyToken=282361b99ded7e8e, processorArchitecture=MSIL">
-      <HintPath>..\..\AdSync\AdSync\packages\C5.2.5.3\lib\net45\C5.dll</HintPath>
+      <HintPath>..\..\AdSync\packages\C5.2.5.3\lib\net45\C5.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,7 +44,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TDigest, Version=1.0.8.0, Culture=neutral, PublicKeyToken=08dabd96fa2ec930, processorArchitecture=MSIL">
-      <HintPath>..\..\AdSync\AdSync\packages\TDigest.1.0.8\lib\net45\TDigest.dll</HintPath>
+      <HintPath>..\..\AdSync\packages\TDigest.1.0.8\lib\net45\TDigest.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -58,9 +58,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LICENSE.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\Collections\Collections.csproj">
       <Project>{3f80cda3-e39d-463b-9122-04efdce15a8a}</Project>
       <Name>Collections</Name>
@@ -69,6 +66,9 @@
       <Project>{ac223035-c97d-4045-ac2c-3050c50b658b}</Project>
       <Name>Health.Abstractions</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
